Association faces VS affichages fenêtres modales réussi

--- a/index.html
+++ b/index.html
@@ -39,7 +39,17 @@
         <![endif]-->
   <p class="d-block text-light position-fixed"><a href="javascript:;">Cliquez ici.</a></p>   
 		
-	 <div id="couincouin"></div> 	
+	 <div id="couincouin"></div> 
+		
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" id="modalTest">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      ...
+    </div>
+  </div>
+</div>
+		
+		
 	
 
 	
