Réenligner le lien HTML

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">Vous utilisez une version de navigateur <strong>désuète</strong>. S'il-vous-plait, <a href="http://browsehappy.com/">mettez à jour votre navigateur</a> pour améliorer votre expérience.</p>
         <![endif]-->
-  <p class="d-block text-light position-fixed"><a href="javascript:;">Cliquez ici.</a></p>   
+  <p class="d-block text-light position-fixed text-center"><a href="javascript:;">Cliquez ici.</a></p>   
 		
 	 <div id="couincouin"></div> 
 		
