--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 		<script src="js/vendor/PointerLockControls.js"></script>
 <!--		<script src="js/vendor/EventDispatcher.js"></script>-->
 		<script src="js/vendor/Detector.js"></script>
+		<script src="js/vendor/Light.js"></script>
+		<script src="js/vendor/DirectionalLightShadow.js"></script>
 
 
 
