--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
    		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 		
 		<!--three.js-->
-		<script src="js/vendor/three.js"></script>
+		<script src="js/vendor/three.min.js"></script>
 		<script src="js/vendor/OrbitControls.js"></script>
 		<script src="js/vendor/PointerLockControls.js"></script>
 <!--		<script src="js/vendor/EventDispatcher.js"></script>-->
