--- a/index.html
+++ b/index.html
@@ -43,9 +43,22 @@
 	 <div id="couincouin"></div> 
 		
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" id="modalTest">
-  <div class="modal-dialog modal-lg">
+	
+  <div class="modal-dialog modal-lg  modal-dialog-centered">
+	  
     <div class="modal-content">
-      ...
+		
+		<div class="modal-header">
+		<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		  <span aria-hidden="true">&times;</span>
+		</button>
+		</div>
+		
+		<div class="modal-body">
+		
+		</div>
+
     </div>
   </div>
 </div>
