TRavail sur l'animation2

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p class="browserupgrade">Vous utilisez une version de navigateur <strong>désuète</strong>. S'il-vous-plait, <a href="http://browsehappy.com/">mettez à jour votre navigateur</a> pour améliorer votre expérience.</p>
         <![endif]-->
 		<h1 class="d-block position-fixed text-center">Frédérique Larouche</h1>
-  <p class="d-block text-light position-fixed text-center"><a href="javascript:;">Cliquez ici.</a></p>   
+  <p class="d-block text-light position-fixed text-center"><a href="javascript:;" id="btncouin">Cliquez ici.</a></p>   
 		
 	 <div id="couincouin"></div> 
 		
