--- a/index.html
+++ b/index.html
@@ -38,18 +38,29 @@
             <p class="browserupgrade">Vous utilisez une version de navigateur <strong>désuète</strong>. S'il-vous-plait, <a href="http://browsehappy.com/">mettez à jour votre navigateur</a> pour améliorer votre expérience.</p>
         <![endif]-->
 		<h1 class="d-block position-fixed text-center">Frédérique Larouche</h1>
-  <p class="d-block text-light position-fixed text-center text-uppercase"><a href="javascript:;" id="btncouin" class="btn btn-secondary">Cliquez / Appuyez pour activer</a></p>   
+  		<div id="txtaccueil" class="d-block text-light position-fixed text-center px-1">
+			<a href="javascript:;" id="btncouin" class="btn btn-lg btn-secondary text-uppercase my-2">Activer</a>
+			<p id="indications" class="text-dark mt-1 font-weight-bold">Ne soyez pas timide.<br>
+ Cliquez.</p>
+			<ul class="text-dark list-unstyled text-uppercase font-weight-bold invisible">
+				<li><span class="triangle">&#9660;</span>// À propos</li>
+				<li><span class="triangle">&#9660;</span>// Compétences</li>
+				<li><span class="triangle">&#9660;</span>// Projets </li>
+				<li><span class="triangle">&#9660;</span>// Contact</li>
+			</ul>
+		</div>
+
 		
 	 <div id="couincouin"></div> 
 		
-<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" id="modalTest">
+<div id="modalsection" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" data-backdrop="static">
 	
   <div class="modal-dialog modal-lg  modal-dialog-centered">
 	  
     <div class="modal-content">
 		
 		<div class="modal-header">
-		<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+		<h5 class="modal-title" id="titresection">Titre de la section</h5>
 		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 		  <span aria-hidden="true">&times;</span>
 		</button>
