Peufinage des indications écrite. En construction

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   		<div id="txtaccueil" class="d-block text-light position-fixed text-center px-1">
 			<a href="javascript:;" id="btncouin" class="btn btn-lg btn-secondary text-uppercase my-2">Activer</a>
 			<p id="indications" class="text-dark mt-1 font-weight-bold">Ne soyez pas timide.<br>
- Cliquez sur le bouton.</p>
+ Cliquez sur le <span class="motscles">bouton</span>.</p>
 			<ul class="text-dark list-unstyled text-uppercase font-weight-bold invisible">
 				<li><span class="triangle">&#9660;</span>// À propos</li>
 				<li><span class="triangle">&#9660;</span>// Compétences</li>
@@ -49,6 +49,8 @@
 				<li><span class="triangle">&#9660;</span>// Contact</li>
 			</ul>
 		</div>
+		
+		
 
 		
 	 <div id="couincouin"></div> 
