--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p class="browserupgrade">Vous utilisez une version de navigateur <strong>désuète</strong>. S'il-vous-plait, <a href="http://browsehappy.com/">mettez à jour votre navigateur</a> pour améliorer votre expérience.</p>
         <![endif]-->
 		<h1 class="d-block position-fixed text-center">Frédérique Larouche</h1>
-  		<div id="txtaccueil" class="d-block text-light position-fixed text-center px-1">
+  		<div id="txtaccueil" class="d-block text-light position-fixed text-center px-1 pb-3">
 			<a href="javascript:;" id="btncouin" class="btn btn-lg btn-secondary text-uppercase my-2">Activer</a>
 			<p id="indications" class="text-dark mt-1 font-weight-bold">Ne soyez pas timide.<br>
  Cliquez sur le <span class="motscles">bouton</span>.</p>
