Fenêtre modale full-screen et sans bordure

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 		
 <div id="modalsection" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" data-backdrop="static">
 	
-  <div class="modal-dialog modal-lg  modal-dialog-centered">
+    <div class="modal-dialog modal-full modal-dialog-centered">
 	  
-    <div class="modal-content">
+        <div class="modal-content border-0 rounded-0">
 		
 		<div class="modal-header">
 		<h5 class="modal-title" id="titresection">Titre de la section</h5>
