Bonification dela section Compétences

--- a/index.html
+++ b/index.html
@@ -86,7 +86,13 @@
                             <li class="list-inline-item">HTML5</li>
                             <li class="list-inline-item">CSS3</li>
                             <li class="list-inline-item">JavaScript</li>
+                            <li class="list-inline-item">Three.js</li>
+                            <li class="list-inline-item">EaselJS</li>
+                            <li class="list-inline-item">Leaflet</li>
+                            <li class="list-inline-item">clipboard.js</li>
+                            <li class="list-inline-item">reveal.js</li>
                             <li class="list-inline-item">Bootstrap 4</li>
+                            <li class="list-inline-item">Animate.css</li>
                             <li class="list-inline-item">jQuery</li>
                             <li class="list-inline-item">WebGL</li>
                             <li class="list-inline-item">Sass</li>
