Tentative de styler dynamiquement la couleur de mes compétences

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </div>
                
                     <!--    COMPÉTENCES      -->
-                    <div class="col-12 col-md-6 d-none">
+                    <div class="col-12 col-md-6 d-none" id="competences">
                        
                         <h2>Compétences</h2>
                         <ul class="list-inline">
