--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
                    
                     <!--    PROJETS      -->
                     
-                    <div class="col-12 col-md-7 d-none" id="projets">
+                    <div class="col-12 col-md-12 col-lg-8 d-none" id="projets">
                         <h2>Projets</h2>
                         <div class="row">
-                            <div class="col-12 col-md-6 mb-3">
+                            <div class="col-11 col-lg-6 mb-3">
                                 <div class="card">
                                    <a href="https://fredelb.github.io/call-hibry/" class="card-link" target="_blank" title="Démo | Call-Hibry">
                                     <img src="img/img_call-hibry.png" alt="card image cap" class="card-img-top w-100">
@@ -133,7 +133,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 mb-3">
+                            <div class="col-11 col-lg-6 mb-3">
                                <div class="card">
                                    <a href="https://fredelb.github.io/generateur_rapqueb/" class="card-link" target="_blank" title="Démo | Générateur Rap Québ'">
                                     <img src="img/img_rapqueb.png" alt="card image cap" class="card-img-top w-100">
@@ -151,7 +151,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 mb-3">
+                            <div class="col-11 col-lg-6 mb-3">
                                <div class="card">
                                    <a href="https://fredelb.github.io/convertisseur_polices/" class="card-link" target="_blank" title="Démo | Convertisseur de polices">
                                     <img src="img/img_convertisseur.png" alt="card image cap" class="card-img-top w-100">
@@ -169,7 +169,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 mb-3">
+                            <div class="col-11 col-lg-6 mb-3">
                                <div class="card">
                                   <a href="https://fredelb.github.io/prototype_navigation-couincouin/" class="card-link" target="_blank" title="Démo | Portfolio">
                                    <img src="img/img_couincouin.png" alt="card image cap" class="card-img-top w-100">
