Ajustements finaux projets

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 			<a href="javascript:;" id="btncouin" class="btn btn-lg btn-secondary text-uppercase my-2">Activer</a>
 			<p id="indications" class="mt-1 font-weight-bold">Ne soyez pas timide.<br>
  Cliquez sur le <span class="motscles">bouton</span>.</p>
-			<ul id="legendesections" class="list-unstyled text-uppercase font-weight-bold invisible">
-				<li><span class="triangle">&#9660;</span>// À propos</li>
-				<li><span class="triangle">&#9660;</span>// Compétences</li>
-				<li><span class="triangle">&#9660;</span>// Projets </li>
-				<li><span class="triangle">&#9660;</span>// Contact</li>
+			<ul id="legendesections" class="list-unstyled list-inline text-uppercase font-weight-bold invisible">
+                <li class="list-inline-item"><span class="triangle">&#9660;</span>// À propos</li>
+                <li class="list-inline-item"><span class="triangle">&#9660;</span>// Compétences</li>
+                <li class="list-inline-item"><span class="triangle">&#9660;</span>// Projets </li>
+                <li class="list-inline-item"><span class="triangle">&#9660;</span>// Contact</li>
 			</ul>
 		</div>
 		
